<resources>
    <string name="app_name">DEMM</string>
    <string name="b_text_search">Buscar</string>
    <string name="b_text_add">Añadir</string>
    <string name="query_search">¿Qué quieres buscar?</string>
    <string name="edit_txt_search">Nombre del objeto</string>
    <string name="thing_name">Nombre</string>
    <string name="thing_placement">Lugar</string>
    <string name="add_thing">Añadir</string>
    <string name="textListPlacement">Lugares en los que se encuentra: %s</string>
    <string name="edit">Editar</string>
    <string name="delete">Borrar</string>
    <string name="thingName">%s</string>
    <string name="editTextView">Para editar introduce un nuevo valor:</string>
    <string name="thingNameText">Nuevo valor para: %s</string>
    <string name="thingPlacementText">Nuevo valor para: %s</string>
    <string name="editButton">Editar</string>
</resources>
