<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:id="@+id/thingName"
        android:layout_width="169dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:text="@string/thingName"
        android:textSize="20sp" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="108dp"
        android:text="@string/edit" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="13dp"
        android:text="@string/delete" />
</RelativeLayout>